# ZoidClaw

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build_output.txt  config.example.json  config.json  errors.json
crates/crabbybot-cli/: Cargo.toml
crates/crabbybot-cli/src/: main.rs
crates/crabbybot-cli/tests/: proxy_test.rs  random_test.rs
crates/crabbybot-core/: Cargo.toml  rugcheck_dump.json
crates/crabbybot-core/examples/: hex_test.rs  stream_test.rs
crates/crabbybot-core/src/: lib.rs  vault.rs
crates/crabbybot-core/src/agent/: context.rs  memory.rs  mod.rs  router.rs  skills.rs
crates/crabbybot-core/src/bus/: events.rs  mod.rs
crates/crabbybot-core/src/config/: mod.rs
crates/crabbybot-core/src/cron/: mod.rs
crates/crabbybot-core/src/gateway/: bridge.rs  utils.rs
crates/crabbybot-core/src/gateway/channels/: discord.rs  mod.rs  telegram.rs
crates/crabbybot-core/src/heartbeat/: mod.rs
crates/crabbybot-core/src/provider/: mod.rs  openai.rs
crates/crabbybot-core/src/service/: mod.rs  pumpfun_stream.rs
crates/crabbybot-core/src/session/: mod.rs
crates/crabbybot-core/src/tools/: alpha_summary.rs  discovery.rs  filesystem.rs  mod.rs  polymarket.rs  polymarket_approve.rs  polymarket_bridge.rs  polymarket_comments.rs  polymarket_common.rs  polymarket_ctf.rs  polymarket_data.rs  polymarket_events.rs  polymarket_orderbook.rs  polymarket_orders.rs  polymarket_prices.rs  polymarket_profiles.rs  polymarket_series.rs  polymarket_sports.rs  polymarket_status.rs  polymarket_stream.rs  polymarket_tags.rs  polymarket_trade.rs  polymarket_wallet.rs  pumpfun.rs  pumpfun_buy.rs  rugcheck.rs  schedule.rs  sentiment.rs  shell.rs  solana.rs  web.rs
crates/crabbybot-core/src/tools/prediction/: graph.rs  graph_builder.rs  mod.rs  ontology.rs  profile_gen.rs  report.rs  simulation.rs  text_processor.rs  tool_graph_query.rs  tool_predict.rs  tool_simulate.rs  types.rs
crates/ferrobot-cli/: Cargo.toml
crates/ferrobot-cli/src/: main.rs
crates/ferrobot-core/: Cargo.toml
crates/ferrobot-core/src/: lib.rs
crates/ferrobot-core/src/agent/: context.rs  memory.rs  mod.rs  skills.rs
crates/ferrobot-core/src/bus/: events.rs  mod.rs
crates/ferrobot-core/src/config/: mod.rs
crates/ferrobot-core/src/cron/: mod.rs
crates/ferrobot-core/src/gateway/: mod.rs
crates/ferrobot-core/src/gateway/channels/: discord.rs  mod.rs  telegram.rs
crates/ferrobot-core/src/provider/: mod.rs  openai.rs  types.rs
crates/ferrobot-core/src/session/: mod.rs
crates/ferrobot-core/src/tools/: shell.rs  web.rs
crates/zoidclaw-cli/: Cargo.toml
crates/zoidclaw-cli/src/: main.rs
crates/zoidclaw-core/: Cargo.toml  rugcheck_dump.json
crates/zoidclaw-core/src/: lib.rs  vault.rs
crates/zoidclaw-core/src/agent/: context.rs  memory.rs  mod.rs  router.rs
crates/zoidclaw-core/src/bus/: events.rs  mod.rs
crates/zoidclaw-core/src/config/: mod.rs
crates/zoidclaw-core/src/cron/: mod.rs
crates/zoidclaw-core/src/gateway/: bridge.rs  mod.rs
crates/zoidclaw-core/src/gateway/channels/: telegram.rs
crates/zoidclaw-core/src/heartbeat/: mod.rs
crates/zoidclaw-core/src/provider/: mod.rs  openai.rs
crates/zoidclaw-core/src/service/: betting.rs  mod.rs  pumpfun_stream.rs
crates/zoidclaw-core/src/session/: mod.rs
crates/zoidclaw-core/src/tools/: betting_control.rs  discovery.rs  filesystem.rs  mod.rs  polymarket.rs  polymarket_approve.rs  polymarket_bridge.rs  polymarket_common.rs  polymarket_events.rs  polymarket_help.rs  polymarket_orderbook.rs  polymarket_orders.rs  polymarket_prices.rs  polymarket_profiles.rs  polymarket_series.rs  polymarket_trade.rs  polymarket_wallet.rs  pumpfun.rs  pumpfun_buy.rs  rugcheck.rs  sentiment.rs  shell.rs  solana.rs  web.rs
polymarket-cli-0.1.4/: Cargo.toml  README.md
polymarket-cli-0.1.4/.github/workflows/: release.yml
polymarket-cli-0.1.4/Formula/: polymarket.rb
polymarket-cli-0.1.4/src/: main.rs  shell.rs  ws.rs
polymarket-cli-0.1.4/src/commands/: approve.rs  bridge.rs  clob.rs  comments.rs  data.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  sports.rs  stream.rs  tags.rs  wallet.rs
polymarket-cli-0.1.4/src/output/: approve.rs  bridge.rs  clob.rs  comments.rs  ctf.rs  data.rs  events.rs  markets.rs  mod.rs  profiles.rs  series.rs  sports.rs  stream.rs  tags.rs
polymarket-client-sdk/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig
polymarket-client-sdk/src/bridge/: client.rs
polymarket-client-sdk/src/clob/: client.rs
polymarket-client-sdk/src/data/: client.rs
polymarket-client-sdk/src/gamma/: client.rs
polymarket-client-sdk/src/rtds/: error.rs
