[workspace]
members = ["crates/zoidclaw-core", "crates/zoidclaw-cli", "polymarket-cli-0.1.4"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["zoidclaw contributors"]
description = "An ultra-lightweight personal AI assistant written in Rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"
scraper = "0.22"
dirs = "6"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
regex = "1"
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
teloxide = { version = "0.13", features = ["macros"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
polymarket-client-sdk = { version = "0.4", features = ["gamma", "data", "bridge", "clob", "ctf"] }
alloy = { version = "1.6", default-features = false, features = ["providers", "sol-types", "contract", "reqwest", "reqwest-rustls-tls", "signer-local", "signers"] }
rust_decimal = "1"
solana-transaction = { version = "4.0", features = ["serde"] }
solana-pubkey = { version = "4.1", features = ["serde"] }
solana-signature = { version = "3.3", features = ["serde"] }
solana-message = { version = "4.0", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde"] }
bs58 = "0.5"
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
bincode = "1.3"
aes-gcm = "0.10"
rand = "0.8"

[patch.crates-io]
polymarket-client-sdk = { path = "polymarket-client-sdk" }
