[package]
name = "crabbybot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI binary for the crabbybot AI assistant"

[[bin]]
name = "crabbybot"
path = "src/main.rs"

[dependencies]
crabbybot-core = { path = "../crabbybot-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"

[features]
default = ["telegram", "discord"]
telegram = ["crabbybot-core/telegram"]
discord = ["crabbybot-core/discord"]
