[package]
name = "crabbybot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for the crabbybot AI assistant"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
scraper = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
polymarket-rust-sdk = { workspace = true }
solana-transaction = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-message = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
teloxide = { workspace = true, optional = true }
serenity = { workspace = true, optional = true }

[features]
default = ["telegram"]
telegram = ["dep:teloxide"]
discord = ["dep:serenity"]
