[package]
name = "ferrobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI binary for the ferrobot AI assistant"

[[bin]]
name = "ferrobot"
path = "src/main.rs"

[dependencies]
ferrobot-core = { path = "../ferrobot-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
futures = "0.3"

[features]
default = ["telegram", "discord"]
telegram = ["ferrobot-core/telegram"]
discord = ["ferrobot-core/discord"]
